--- a/src/post-py/Dockerfile
+++ b/src/post-py/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.6-alpine
 
 ENV POST_DATABASE_HOST post_db
 ENV POST_DATABASE posts
+ENV APP_HOME /app
 
-WORKDIR /app
-ADD . /app
+WORKDIR $APP_HOME
+ADD . $APP_HOME
 
 RUN apk --no-cache --update add build-base && \
     pip install --upgrade pip && \
