--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -41,8 +41,23 @@ services:
     networks:
       - reddit_back
 
+  grafana:
+    image: grafana/grafana:7.5.6
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=secret
+    depends_on:
+      - prometheus
+    ports:
+      - 3000:3000
+    networks:
+      - reddit_back
+
 volumes:
   prometheus_data:
+  grafana_data:
 
 networks:
   reddit_front:
