--- a/docker/docker-compose-monitoring.yml
+++ b/docker/docker-compose-monitoring.yml
@@ -55,6 +55,15 @@ services:
     networks:
       - reddit_back
 
+  alertmanager:
+    image: ${USER_NAME}/alertmanager
+    command:
+      - '--config.file=/etc/alertmanager/config.yml'
+    ports:
+      - 9093:9093
+    networks:
+      - reddit_back
+
 volumes:
   prometheus_data:
   grafana_data:
