--- a/docker/docker-compose-logging.yml
+++ b/docker/docker-compose-logging.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   fluentd:
-    image: ${USERNAME}/fluentd
+    image: ${USER_NAME}/fluentd
     ports:
       - "24224:24224"
       - "24224:24224/udp"
@@ -22,3 +22,15 @@ services:
     image: kibana:7.4.0
     ports:
       - "5601:5601"
+
+  zipkin:
+    image: openzipkin/zipkin:2.21.0
+    ports:
+      - "9411:9411"
+    networks:
+      - reddit_front
+      - reddit_back
+
+networks:
+  reddit_front:
+  reddit_back:
